tests/fixtures/pass/inherent_temporary_mut_receiver.sali
let Counter = struct(value: i32)

extend Counter {
  let reset(mut borrow self)(): i32 = {
    self.value = 42
    self.value
  }
}

let main(): i32 = Counter(0).reset()
