tests/fixtures/fail/box_redefine.sali
let Box = struct(value: i32)

let main(): i32 = 0
